Merge pull request #543 from basil/JENKINS-63766
[JENKINS-63766] Work around JDK-8231454

(cherry picked from commit 0449852ee36f3abb53d4908a5b533b2d4d146c26)